--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,9 @@
 <div class="post-main posts-index">
+  <%= search_form_for @q do |f| %>
+    <%= f.label :content, "Keyword" %>
+    <%= f.search_field :content_cont %>
+    <%= f.submit "検索" %>
+  <% end %>
   <div class="post-container">
     <% @posts.each do |post| %>
       <div class="posts-index-item">
